<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom|center"></RelativeLayout>



    <ListView
        android:id="@+id/IngredientsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></ListView>
    <LinearLayout
        android:id="@+id/LayoutAddIngredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_below="@id/IngredientsList"
        >
        <EditText
            android:id="@+id/EditTextAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_ingredient_amount"
            android:layout_weight="0.2"
            android:textSize="10pt"
            />
        <EditText
            android:id="@+id/EditTextIngredient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_ingredient"
            android:layout_weight="0.6"
            android:textSize="10pt"
            />

        <Button
            android:id="@+id/ButtonAddIngredient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/btn_add_ingredient"
            android:textSize="10pt"
            />
    </LinearLayout>


    <EditText
        android:id="@+id/EditTextDesc"
        android:layout_height="wrap_content"
        android:hint="@string/create_desc"
        android:inputType="textMultiLine"
        android:layout_width="fill_parent"
        android:layout_below="@id/LayoutAddIngredient"
        >
    </EditText>
    <TextView
        android:id="@+id/TextViewAlarms"
        android:layout_height="wrap_content"
        android:hint="@string/alarms"
        android:inputType="textMultiLine"
        android:layout_width="fill_parent"
        android:layout_below="@id/EditTextDesc"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        >
    </TextView>
    <LinearLayout

        android:id="@+id/LayoutAddAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/TextViewAlarms">

        <Button
            android:id="@+id/ButtonAddAlarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/set_new_alarm"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/ButtonRemoveAlarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/remove_last_alarm"
            android:layout_weight="1"/>
    </LinearLayout>

     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_below="@id/LayoutAddAlarm"
         >

        <LinearLayout

            android:id="@+id/LayoutAddImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ButtonImgGallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/get_gallery_picture"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/ButtonTakePhoto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/take_photo"
                android:layout_weight="1"/>
            </LinearLayout>

        <Button
            android:id="@+id/ButtonFinishAdding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish_creating"
            android:layout_below="@id/LayoutAddImage"/>


     </RelativeLayout>


</RelativeLayout>
